changed the final message for this branch

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         }
         stage('Complete') {
             steps {
-                echo 'Job is really Completed'
+                echo 'Job in NEWPIPELINE is really Completed'
             }
         }
     }
